<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_create"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_create" />

    <item
        android:id="@+id/navigation_read"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_read" />

    <item
        android:id="@+id/navigation_update"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/title_update" />
    <item
        android:id="@+id/navigation_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/title_delete" />
    <item
        android:id="@+id/navigation_list"
        android:icon="?android:attr/actionModeFindDrawable"
        android:title="@string/title_list" />

</menu>